feat: Certificate Generation
